fix hero font weight, service13 images

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -288,10 +288,10 @@
 								<div class="title-before ico-70"><span class="flaticon-branch-2"></span></div>
 
 								<!-- Title -->
-								<h2 class=""blushH2>Blush Nail Bar</h2>
+								<h2 class="blush-H2">Blush Nail Bar</h2>
 
 								<!-- Text -->
-								<p>Come Be Pampered
+								<p class="blush-H2 blush-p">Come Be Pampered
 								</p>
 
 								<!-- Button -->
