fixed spelling error

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -987,7 +987,7 @@
 										</li>
 
 										<li class="pricing-list-txt">
-											<h5 class="h5-md txt-color-01">Ting & Wax</h5>
+											<h5 class="h5-md txt-color-01">Tint & Wax</h5>
 											<h4 class="h4-xs pricing-list-amount txt-color-01">$32</h4>
 										</li>
 										
@@ -1071,7 +1071,7 @@
 										</li>
 
 										<li class="pricing-list-txt">
-											<h5 class="h5-md txt-color-01">Ting & Wax</h5>
+											<h5 class="h5-md txt-color-01">Tint & Wax</h5>
 											<h4 class="h4-xs pricing-list-amount txt-color-01">$32</h4>
 										</li>
 										
