adjusted capitlization error with Addon services and tinting

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 										</div>
 									</div>	
 									<!-- Title 	-->	
-									<h3 class="h3-xl txt-color-01">TINTING</h3>
+									<h3 class="h3-xl txt-color-01">Tinting</h3>
 
 								</div>
 								
@@ -1056,7 +1056,7 @@
 										</div>
 									</div>	
 									<!-- Title 	-->	
-									<h3 class="h3-xl txt-color-01">ADD-ON SERVICES</h3>
+									<h3 class="h3-xl txt-color-01">Add-on Services</h3>
 
 								</div>
 								
